--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -15,16 +15,47 @@ main section img {
     box-sizing: border-box;
 }
 
+.home-grid {
+    display: grid;
+    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+}
+
 #logo_link {
     padding-top: 5px;
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 #background {
     height: 725px;
 }
 
-#hero-img {
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-image {
     width: 100%;
+    
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+#hero-msg h4, #hero-msg h1 {
+    color: #f6fff8
 }
 
 .icon, .logo {
@@ -45,6 +76,13 @@ body {
 
 header {
     background-color: #cce3de;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a {
@@ -64,6 +102,7 @@ nav a:hover {
     font-family: "Oswald", "Georgia (serif)", "Tahoma (sans-serif)";
     font-size: 2em;
     margin-top: 10px;
+    text-align: center;
 }
 
 h4 {
@@ -115,13 +154,18 @@ h2 {
 footer {
     background-color: #cce3de;
     color: black;
-    margin-top: 50px;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
 }
 
 footer a {
     color: black;
     text-decoration: none;
-    padding: 25px 50px
+    
 }
 
 footer a:hover {
@@ -142,8 +186,97 @@ footer .social img {
 
 .rivers-card .rapids-card .camping-card {
     margin: 200px 0;
+    
 }
+
 
 .card-img {
     border: 10px solid #5F8172;
+    width: 200px;
+    transition: .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.card-img .mountains {
+    width: 100%;
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg {
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
