--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -59,6 +59,9 @@ header {
   text-align: center;
   color: var(--headline-color-on-color);
   background-color: var(--paragraph-background-color);
+  display: grid;
+  grid-template-columns: 150px auto;
+  
 }
 header > h1, header > h2 {
   color: var(--headline-color-on-color);
@@ -102,8 +105,11 @@ nav {
   line-height: 3em;
   text-align: center;
   font-size: 1.2em;
+  display: flex;
+  justify-content: space-around;
 }
 nav  {
+  justify-content: flex start;
   list-style-type: none;
   display: flex;
 }
@@ -162,4 +168,16 @@ nav a:hover {
   grid-area: right;
   border-top: 1px solid;
   border-right: 1px solid;
+}
+
+.button-box {
+  border-bottom: 25;
+  margin-bottom: 25;
+  padding-bottom: 25
+}
+
+#logo_link {
+  padding-top: 5px;
+  justify-self: center;
+  align-self: center;
 }
