--- a/Chimichanga/site-plan.css
+++ b/Chimichanga/site-plan.css
@@ -4,25 +4,25 @@ Fonts are separated by a | */
 @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Source+Sans+Pro&display=swap');
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #5F8172   ;
-  --secondary-color: #a4c3b2 ;
-  --accent1-color: #cce3de;
-  --accent2-color: #f6fff8;
+  --primary-color: #00BBF9   ;
+  --secondary-color: #00F5A7 ;
+  --accent1-color: #9B5DE5;
+  --accent2-color: #FF9940;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Oswald";
   --paragraph-font: "Source Sans Pro", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #5F8172;  /* headlines on a white background */ 
+  --headline-color-on-white: #FF9940;  /* headlines on a white background */ 
   --headline-color-on-color: #f6fff8; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #5F8172; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: black; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #f6fff8; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #5F8172  ;
-  --nav-link-color: #5F8172;
-  --nav-background-color: #cce3de;
-  --nav-hover-link-color: #f6fff8;
-  --nav-hover-background-color: #5F8172;
+  --paragraph-background-color: #00BBF9  ;
+  --nav-link-color: #9B5DE5;
+  --nav-background-color: #00BBF9;
+  --nav-hover-link-color: #9B5DE5;
+  --nav-hover-background-color: #00F5A7;
 }
 
 
@@ -171,5 +171,10 @@ nav a:hover {
   grid-area: right;
   border-top: 1px solid;
   border-right: 1px solid;
+}
+
+.image {
+  width: 500px;
+
 }
 /*this is the end of the document*/
