--- a/Chimichanga/site-plan.css
+++ b/Chimichanga/site-plan.css
@@ -10,7 +10,7 @@ Fonts are separated by a | */
   --accent2-color: #FF9940;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Oswald";
+  --heading-font: "Oswald", "Monospace";
   --paragraph-font: "Source Sans Pro", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
