--- a/Chimichanga/styles/style.css
+++ b/Chimichanga/styles/style.css
@@ -1,11 +1,128 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Source+Sans+Pro&display=swap');
+
+.home-title {
+    font-family: "Oswald", "Monospace";
+    
+}
+
+#Header {
+    grid-column: 3;
+}
+
+nav {
+    z-index: 2;
+    display: flex;
+    justify-content: space-around;
+    grid-column: 3;
+    grid-row: 11;
+    font-family: "Oswald", "Monospace";;
+}
+
+nav a {
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    padding: 35px;
+    background-color: #9B5DE5;
+    margin: 25px;
+    
+}
+
+nav a:hover {
+    background-color: #FF9940;   
+    color: black;
+   }
+
+#Welcome_msg {
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    grid-column: 2;
+    grid-row: 5;
+    
+}
+
+
+body {
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    background-color: #00F5A7;
+}
+
+
+#header-grid {
+    display: grid;
+    grid-template-columns: repeat(5, 20%);
+    grid-template-rows: repeat(10, 10%);
+}
+
+header {
+    background-color: #00BBF9;
+    
+    
+    
+}
+
 .logo {
-    width: 200px;
+    width: 300px;
+    
+    
+
+}
+
+.personal_div {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    
+    
 }
 
 .personal_image {
-    width: 500px;
+    width: 70%;
+    padding: 100px;
+    
+}
+
+#first-image {
+    padding-top: 65px;
 }
 
 .client_img {
     width: 400px;
+}
+
+
+.home-grid {
+    display: grid;
+    
+    
+}
+
+
+
+
+
+footer {
+    background-color: #00BBF9;
+    color: black;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer a {
+    color: black;
+    text-decoration: none;
+}
+
+.footer-link {
+    background-color: #9B5DE5;
+    padding: 20px;
+    margin: 20px;
+    
+}
+
+footer a:hover {
+    background-color: #FF9940;
+    color: black;
 }
